Añadidos archivos iniciales del sitio web

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="/imag/foto_1.png" alt="Juan Pablo Molano Rojas">
+        <img src="./imag/foto_1.png" alt="Juan Pablo Molano Rojas">
         <h1>Juan Pablo Molano Rojas</h1> 
         <p>Biografía personal y profesional</p>
     </header>
@@ -24,7 +24,7 @@
     <section id="trayectoria">
         <h2>Trayectoria</h2>
         <div>
-            <h3></h3>
+            <h3>Logros</h3>
             <p>La trayectoria de vida de Juan Pablo Molano
                 Juan Pablo Molano nació en 1982 en un pequeño pueblo llamado San Vicente, enclavado en las montañas andinas de Colombia. Hijo de Elena, maestra de escuela, y Ricardo, un caficultor respetado en la región, Juan Pablo creció entre cafetales y con una profunda conexión con la naturaleza.
                 Desde muy joven, mostró una curiosidad insaciable y una capacidad extraordinaria para predecir cambios climáticos observando el comportamiento de plantas y animales. Los ancianos del pueblo notaron este don especial y le enseñaron conocimientos ancestrales sobre la tierra.
@@ -62,12 +62,12 @@
     <section id="galeria">
         <h2>Galería de Imágenes</h2>
         <div>
-            <img src="/imag/ruta-a-imagen1.jpg" alt="Descripción de la imagen 1">
-            <img src="/imag/ruta-a-imagen2.jpg" alt="Descripción de la imagen 2">
-            <img src="/imag/ruta-a-imagen3.jpg" alt="Descripción de la imagen 3">
-            <img src="/imag/ruta-a-imagen4.jpg" alt="Descripción de la imagen 4">
-            <img src="/imag/ruta-a-imagen5.jpg" alt="Descripción de la imagen 5">
-            <img src="/imag/ruta-a-imagen6.jpg" alt="Descripción de la imagen 6">
+            <img src="./imag/ruta-a-imagen1.jpg" alt="Descripción de la imagen 1">
+            <img src="./imag/ruta-a-imagen2.jpg" alt="Descripción de la imagen 2">
+            <img src="./imag/ruta-a-imagen3.jpg" alt="Descripción de la imagen 3">
+            <img src="./imag/ruta-a-imagen4.jpg" alt="Descripción de la imagen 4">
+            <img src="./imag/ruta-a-imagen5.jpg" alt="Descripción de la imagen 5">
+            <img src="./imag/ruta-a-imagen6.jpg" alt="Descripción de la imagen 6">
         </div>
     
     <section id="vida-personal">
