--- a/index.html
+++ b/index.html
@@ -84,8 +84,10 @@
         <h2>Contacto</h2>
         <p>Puedes contactar con Juan Pablo Molano Rojas a través de los siguientes medios:</p>
         <ul>
-            <li>Email: <a href="molanor.juan@gmail.com">correo@ejemplo.com</a></li>
-            <li>LinkedIn: <a href="https://www.linkedin.com/in/juan-pablo-molano-rojas-30029a113/">linkedin.com/in/juanpablomolanorojas</a></li>
+            <li>Email: <a href="molanor.juan@gmail.com">molanor.juan@gmail.com</a></li>
+            <li>LinkedIn: <a href="https://www.linkedin.com/in/juan-pablo-molano-rojas-30029a113/">https://www.linkedin.com/in/juan-pablo-molano-rojas-30029a113/git add .
+git commit -m "Añadidos archivos iniciales del sitio web"
+git push origin main</a></li>
         </ul>
     </section>
     
