Actualizado el contenido del sitio web

--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@
         <ul>
             <li>Email: <a href="mailto:molanor.juan@gmail.com">molanor.juan@gmail.com</a></li>
             <li>LinkedIn: <a href="https://www.linkedin.com/in/juan-pablo-molano-rojas-30029a113/">Juan Pablo Molano Rojas</a></li>
+            <li>Email: <a href="https://github.com/molanor/bit-website">github.com</a></li>
         </ul>
     </section>
     
