Actualizado el contenido del sitio web

--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
     <section id="logros">
         <h2>Formación Académica</h2>
         <ul>
-            <li>2021: Universidad EAN, Candidato a Título de Especialista en Gerencia de Proyectos.</li>
-            <li>2019: Universidad del Rosario, III semestres Maestría de Economía de las Políticas Públicas.</li>
+            <li>2021: Universidad EAN, Especialista en Gerencia de Proyectos.</li>
+            <li>2019: Universidad del Rosario, Maestría de Economía de las Políticas Públicas.</li>
             <li>2015: Universidad del Rosario, Profesional en Ciencia Política y Gobierno.</li>
             <li>2021: Servicio Nacional de Aprendizaje (SENA), Curso Producción Agropecuaria, Ecológica para la Soberanía Alimentaria.</li>
             <li>2020: Servicio Nacional de Aprendizaje (SENA), Curso Especial en Emprendimiento en Producción de Cultivos Transitorios.</li>
