Actualizado el contenido del sitio web

--- a/index.html
+++ b/index.html
@@ -169,19 +169,7 @@
     
     <section id="logros">
         <h2>Formación Académica</h2>
-        <ul>
-            <li>2021: Universidad EAN, Especialista en Gerencia de Proyectos.</li>
-            <li>2019: Universidad del Rosario, Maestría de Economía de las Políticas Públicas.</li>
-            <li>2015: Universidad del Rosario, Profesional en Ciencia Política y Gobierno.</li>
-            <li>2021: Servicio Nacional de Aprendizaje (SENA), Curso Producción Agropecuaria, Ecológica para la Soberanía Alimentaria.</li>
-            <li>2020: Servicio Nacional de Aprendizaje (SENA), Curso Especial en Emprendimiento en Producción de Cultivos Transitorios.</li>
-            <li>2015: Universidad del Rosario, Curso de Sistemas de Información Geográfica y Georreferenciada.</li>
-            <li>2014: Universidad del Rosario, Diplomado en Geopolítica y Relaciones Internacionales Contemporáneas.</li>
-            <li>2014: Universidad del Rosario, Diplomado en Amenazas Globales en Contextos Locales: Radiografía de Políticas de Seguridad.</li>
-            <li>2013: Institut Privé CAMPUS LANGUES, Curso de francés avanzado. Paris, Francia.</li>
-            <li>2013: Escuela Superior de Administración Pública (ESAP). Diplomado en el Sistema General de Regalías y Control Social.</li>
-            <li>2011: Corporación Andina de Fomento, The Graduate School Of Political Management The George Washington University y la Universidad del Rosario. Diplomado en Altos Estudios en Gerencia Política y Gobernabilidad.</li>
-        </ul>
+    <p><a href="cajas.html">Ver formación académica en detalle</a></p>
     </section>
     
     <section id="galeria">
