--- a/cajas.html
+++ b/cajas.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formación Académica - Juan Pablo Molano Rojas</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./style.css">
     <style>
         .education-container {
             display: flex;
