--- a/cajas.html
+++ b/cajas.html
@@ -48,7 +48,7 @@
         .back-button {
             display: inline-block;
             background-color: #3498db;
-            color: white;
+            color: black;
             padding: 10px 20px;
             border-radius: 4px;
             margin: 20px 0;
@@ -58,7 +58,7 @@
         .back-button:hover {
             background-color: #2980b9;
             text-decoration: none;
-            color: white;
+            color: black;
         }
     </style>
 </head>
