--- a/cajas.html
+++ b/cajas.html
@@ -14,7 +14,7 @@
         }
         
         .education-card {
-            background-color: white;
+            background-color: red;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0,0,0,0.1);
             padding: 20px;
