Actualizado el contenido del sitio web

--- a/cajas.html
+++ b/cajas.html
@@ -14,7 +14,7 @@
         }
         
         .education-card {
-            background-color: red;
+            background-color: rgb(160, 40, 40);
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0,0,0,0.1);
             padding: 20px;
@@ -29,7 +29,7 @@
         
         .year {
             font-weight: bold;
-            color: #3498db;
+            color: #dbe2e7;
             font-size: 1.2em;
             display: block;
             margin-bottom: 5px;
