--- a/cajas.html
+++ b/cajas.html
@@ -47,7 +47,7 @@
         
         .back-button {
             display: inline-block;
-            background-color: #3498db;
+            background-color: #e1e8ed;
             color: black;
             padding: 10px 20px;
             border-radius: 4px;
