Actualizado el contenido del sitio web

--- a/cajas.html
+++ b/cajas.html
@@ -87,7 +87,7 @@
                 <div class="education-card">
                     <span class="year">2019</span>
                     <span class="institution">Universidad del Rosario</span>
-                    <span class="degree">Maestría de Economía de las Políticas Públicas</span>
+                    <span class="degree">Maestría en Economía de las Políticas Públicas</span>
                 </div>
                 
                 <div class="education-card">
